Ensure the gradient stretches the entire length of the screen

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,8 +8,11 @@
     box-sizing: border-box
 
 html
-    background: linear-gradient($bg-start, $bg-end) no-repeat
-    height: 100%
+    background: linear-gradient($bg-start, $bg-end)
+    min-height: 100%
+    position: relative
+    width: 100%
+    margin: 0
     font-family: $font
     font-size: 16px
 
